# aurora-symcalc

./: CMakeLists.txt  README.md  TODO.md  quickbuild.sh
scripts/: all.ask  derivative.ask  erf.ask  pack.ask  supersin.ask  taylor.ask
src/: command_reader.c  command_reader.h  debug.h  elementary.c  elementary.h  fmath.c  fmath.h  function.c  function.h  functional.c  functional.h  graph.c  graph.h  interpret.c  interpret.h  main.c  operation.h  operations.c  operations.h  parse_instructions.c  parse_instructions.h  parse_map.c  parse_map.h  symbol_map.c  symbol_map.h  terminal.c  terminal.h  tokenlist.c  tokenlist.h
src/env/: commands.c  commands.h  environment.c  environment.h  interpret.c  interpret.h  operators.c  operators.h  runtime.c  runtime.h  script_stack.h
src/environment/: environment.c  environment.h  environment_types.h  file_reader.c  file_reader.h  runtime.c  runtime.h  symbol_map.c  symbol_map.h
src/functional/: function.c  function.h  interpret.c  interpret.h  parse_instructions.c  parse_map.h  tokenlist.h
src/internal/: alloc_stack.c  differentiate.c  differentiate.h  hash_map.c  hash_map.h  operators.h  simplify.c  simplify.h  token_list.c  token_list.h  types.h
src/internal/allocators/: alloc_stack.c  alloc_stack.h  gstring.c  gstring.h  mstring.c  mstring.h  script_stack.c  script_stack.h  stringqueue.c  stringqueue.h  vstring.c  vstring.h
src/internal/procedures/: differentiate.c  differentiate.h  operators.c  operators.h  representations.c  representations.h  simplify.c  simplify.h
src/objects/: alloc_stack.h  function.c  function.h  function_stack.c  hash_map.c  hash_map.h  initializers.c  initializers.h  mstrings.c  mstrings.h  object.c  object.h  packed_function.c  packed_function.h  token_list.c  token_list.h  types.h  vector.c  vector.h
src/readers/: function_reader.c  function_reader.h  functional.c  functional.h  vector_reader.c  vector_reader.h
src/strings/: gstring.c  gstring.h  mstring.c  mstring.h  vstring.c  vstring.h
src/utils/: elementary.h  operation.h  string_list.c  string_list.h  strings.c  strings.h
test/: CMakeLists.txt  elementary_test.c  environment_test.c  function_test.c  functional_test.c  hash_map_test.c  interpret_test.c  line_interp_test.c  operations_test.c  string_list_test.c  strings_test.c  tokenlist_test.c
test/helpers/: testing.h
